exprience mng changes applied on home pgae

--- a/app/src/main/res/layout/landscape_item.xml
+++ b/app/src/main/res/layout/landscape_item.xml
@@ -19,193 +19,225 @@
         android:layout_height="wrap_content"
         rv_centered="true">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/transparent">
+            android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView
-                style="@style/Custom.Widget.CardView"
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/NontonSize2">
+                android:background="@color/transparent">
 
-                <me.vipa.app.utils.CustomProgressBar
-                    android:id="@+id/progress_bar"
-                    style="@style/Widget.AppCompat.ProgressBar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:visibility="gone" />
-
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/NontonSize95">
-
-                    <ImageView
-                        android:id="@+id/itemImage"
-                        errorImage="@{@drawable/placeholder_landscape}"
-                        placeholder="@{@drawable/placeholder_landscape}"
-                        android:layout_width="@dimen/NontonSize168"
-                        android:layout_height="@dimen/NontonSize95"
-                        android:background="@drawable/placeholder_landscape"
-                        android:contentDescription="TODO"
-                        android:scaleType="fitXY" />
-
-                    <LinearLayout
-                        android:id="@+id/llContinueProgress"
-                        android:layout_width="match_parent"
-                        android:orientation="vertical"
-                        android:layout_alignParentBottom="true"
-                        android:layout_height="match_parent"
-                        android:visibility="visible">
-
-
-                        <RelativeLayout
-                            android:layout_width="@dimen/NontonSize168"
-                            android:layout_height="@dimen/NontonSize93">
-
-                            <ImageView
-                                android:layout_centerInParent="true"
-                                android:layout_width="@dimen/NontonSize30"
-                                android:layout_height="@dimen/NontonSize30"
-                                android:background="@drawable/play_icon_ios"
-                                android:contentDescription="TODO"
-                                android:scaleType="fitXY" />
-
-
-                        </RelativeLayout>
-
-
-                        <SeekBar
-                            android:id="@+id/progressBar"
-                            android:layout_width="match_parent"
-                            android:layout_height="2dp"
-                            android:layout_alignParentBottom="true"
-                            android:layout_gravity="bottom"
-                            android:background="@color/bottom_navigation_bg_dark"
-                            android:minHeight="0dp"
-                            android:paddingStart="0dp"
-                            android:paddingEnd="0dp"
-                            android:paddingBottom="0dp"
-                            android:progressDrawable="@drawable/progress_background"
-                            android:thumb="@color/gray"
-                            android:thumbTint="@android:color/transparent"
-                            tools:targetApi="lollipop"
-                            android:progress="@{progress}"
-                            android:elevation="10dp"/>
-                    </LinearLayout>
-
-
-                </RelativeLayout>
-
-                <RelativeLayout
+                <androidx.cardview.widget.CardView
+                    style="@style/Custom.Widget.CardView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:visibility="gone">
+                    android:layout_marginRight="@dimen/NontonSize2">
 
-                    <TextView
-                        android:id="@+id/tvTitle"
-                        android:layout_width="match_parent"
+                    <me.vipa.app.utils.CustomProgressBar
+                        android:id="@+id/progress_bar"
+                        style="@style/Widget.AppCompat.ProgressBar"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginTop="@dimen/_30sdp"
-                        android:background="@drawable/above_shado"
-                        android:fontFamily="@font/sukhumvittadmai_normal"
-                        android:gravity="left"
-                        android:paddingLeft="@dimen/_5sdp"
-                        android:paddingBottom="@dimen/_5sdp"
-                        android:singleLine="true"
-                        android:text="Gadis"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_11sdp" />
-
-                </RelativeLayout>
-
-                <FrameLayout
-                    android:id="@+id/flExclusive"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginStart="-2dp"
-                    android:layout_marginTop="-2dp"
-                    android:visibility="gone">
-
-                    <ImageView
-                        android:layout_width="@dimen/vip_badge_width"
-                        android:layout_height="@dimen/vip_badge_height"
                         android:layout_gravity="center"
-                        android:src="@{playlistItem.vipImageDrawable, default=@drawable/vip_icon_120}"
-                        tools:ignore="ContentDescription" />
-                </FrameLayout>
+                        android:visibility="gone" />
 
-                <FrameLayout
-                    android:id="@+id/flEpisode"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_gravity="end"
-                    android:layout_marginTop="-1dp"
-                    android:layout_marginEnd="-2dp"
-                    android:visibility="gone">
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="@dimen/NontonSize95">
+
+                        <ImageView
+                            android:id="@+id/itemImage"
+                            errorImage="@{@drawable/placeholder_landscape}"
+                            placeholder="@{@drawable/placeholder_landscape}"
+                            android:layout_width="@dimen/NontonSize168"
+                            android:layout_height="@dimen/NontonSize95"
+                            android:background="@drawable/placeholder_landscape"
+                            android:contentDescription="TODO"
+                            android:scaleType="fitXY" />
+
+
+
+                        <LinearLayout
+                            android:id="@+id/llContinueProgress"
+                            android:layout_width="match_parent"
+                            android:orientation="vertical"
+                            android:layout_alignParentBottom="true"
+                            android:layout_height="match_parent"
+                            android:visibility="gone">
+
+
+                            <RelativeLayout
+                                android:layout_width="@dimen/NontonSize168"
+                                android:layout_height="@dimen/NontonSize93">
+
+                                <ImageView
+                                    android:layout_centerInParent="true"
+                                    android:layout_width="@dimen/NontonSize30"
+                                    android:layout_height="@dimen/NontonSize30"
+                                    android:background="@drawable/play_icon_ios"
+                                    android:contentDescription="TODO"
+                                    android:scaleType="fitXY" />
+
+
+                            </RelativeLayout>
+
+
+                            <SeekBar
+                                android:id="@+id/progressBar"
+                                android:layout_width="match_parent"
+                                android:layout_height="2dp"
+                                android:layout_alignParentBottom="true"
+                                android:layout_gravity="bottom"
+                                android:background="@color/bottom_navigation_bg_dark"
+                                android:minHeight="0dp"
+                                android:paddingStart="0dp"
+                                android:paddingEnd="0dp"
+                                android:paddingBottom="0dp"
+                                android:progressDrawable="@drawable/progress_background"
+                                android:thumb="@color/gray"
+                                android:thumbTint="@android:color/transparent"
+                                tools:targetApi="lollipop"
+                                android:progress="@{progress}"
+                                android:elevation="10dp"/>
+                        </LinearLayout>
+
+                        <FrameLayout
+                            android:id="@+id/flNew"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="-2dp"
+                            android:layout_alignParentBottom="true"
+                            android:layout_alignParentRight="true"
+                            android:visibility="gone">
+
+                            <ImageView
+                                android:layout_width="@dimen/vip_badge_width"
+                                android:layout_height="@dimen/vip_badge_height"
+                                android:src="@{playlistItem.newSeriesImageDrawable, default=@drawable/series_icon_120}"
+                                tools:ignore="ContentDescription"/>
+                        </FrameLayout>
+
+                        <FrameLayout
+                            android:id="@+id/flNewMovie"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="-2dp"
+                            android:layout_marginTop="@dimen/NontonSize55"
+                            android:layout_alignParentBottom="true"
+                            android:layout_alignParentRight="true"
+                            android:visibility="gone">
+
+                            <ImageView
+                                android:layout_width="@dimen/vip_badge_width"
+                                android:layout_height="@dimen/vip_badge_height"
+                                android:src="@{playlistItem.newMoviesDrawable, default=@drawable/new_movie_120}"
+                                tools:ignore="ContentDescription"/>
+                        </FrameLayout>
+
+
+                    </RelativeLayout>
+
+
+
+
+                    <RelativeLayout
+                        android:id="@+id/titleLayout"
+                        android:layout_width="@dimen/NontonSize168"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone">
+
+                        <LinearLayout
+                            android:orientation="vertical"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+
+                            <TextView
+                                android:id="@+id/tvTitle"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/NontonSize95"
+                                android:ellipsize="end"
+                                android:gravity="left"
+                                android:maxLines="1"
+                                android:visibility="gone"
+                                android:fontFamily="@font/sukhumvittadmai_normal"
+                                android:paddingTop="@dimen/NontonSize2"
+                                android:paddingLeft="@dimen/_3sdp"
+                                android:textColor="?attr/watchlist_item_title_color"
+                                android:textSize="@dimen/_11sdp" />
+
+                            <TextView
+                                android:id="@+id/tvDescription"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:ellipsize="end"
+                                android:gravity="left"
+                                android:maxLines="1"
+                                android:visibility="gone"
+                                android:fontFamily="@font/sukhumvittadmai_normal"
+                                android:paddingLeft="@dimen/_3sdp"
+                                android:paddingBottom="@dimen/_2sdp"
+                                android:textColor="?attr/watchlist_item_title_color"
+                                android:textSize="@dimen/_9sdp" />
+
+
+                        </LinearLayout>
+
+                    </RelativeLayout>
+
+                    <FrameLayout
+                        android:id="@+id/flExclusive"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginStart="-2dp"
+                        android:layout_marginTop="-2dp"
+                        android:visibility="gone">
+
+                        <ImageView
+                            android:layout_width="@dimen/vip_badge_width"
+                            android:layout_height="@dimen/vip_badge_height"
+                            android:layout_gravity="center"
+                            android:src="@{playlistItem.vipImageDrawable, default=@drawable/vip_icon_120}"
+                            tools:ignore="ContentDescription" />
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:id="@+id/flEpisode"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_gravity="end"
+                        android:layout_marginTop="-1dp"
+                        android:layout_marginEnd="-2dp"
+                        android:visibility="gone">
+
+                        <ImageView
+                            android:layout_width="@dimen/episode_badge_width"
+                            android:layout_height="@dimen/episode_badge_height"
+                            android:layout_gravity="center"
+                            android:src="@{playlistItem.episodeImageDrawable, default=@drawable/episode_icon_120}"
+                            tools:ignore="ContentDescription"/>
+                    </FrameLayout>
+
+
+
+
 
                     <ImageView
-                        android:layout_width="@dimen/episode_badge_width"
-                        android:layout_height="@dimen/episode_badge_height"
+                        android:id="@+id/ivContinuePlay"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:src="@{playlistItem.episodeImageDrawable, default=@drawable/episode_icon_120}"
-                        tools:ignore="ContentDescription"/>
-                </FrameLayout>
+                        android:contentDescription="continue_watching_play_icon"
+                        android:visibility="gone"
+                        app:srcCompat="@drawable/play_icon_rounded_blue" />
 
 
-                <FrameLayout
-                    android:id="@+id/flNew"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="-2dp"
-                    android:layout_gravity="end|bottom"
-                    android:visibility="gone">
-
-                    <ImageView
-                        android:layout_width="@dimen/vip_badge_width"
-                        android:layout_height="@dimen/vip_badge_height"
-                        android:src="@{playlistItem.newSeriesImageDrawable, default=@drawable/series_icon_120}"
-                        tools:ignore="ContentDescription"/>
-                </FrameLayout>
-                <FrameLayout
-                    android:id="@+id/flNewMovie"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="-2dp"
-                    android:layout_gravity="end|bottom"
-                    android:visibility="gone">
-
-                    <ImageView
-                        android:layout_width="@dimen/vip_badge_width"
-                        android:layout_height="@dimen/vip_badge_height"
-                        android:src="@{playlistItem.newMoviesDrawable, default=@drawable/new_movie_120}"
-                        tools:ignore="ContentDescription"/>
-                </FrameLayout>
-
-
-                <ImageView
-                    android:id="@+id/ivContinuePlay"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:contentDescription="continue_watching_play_icon"
-                    android:visibility="gone"
-                    app:srcCompat="@drawable/play_icon_rounded_blue" />
-
-
-                <!--<SeekBar-->
+                    <!--<SeekBar-->
                     <!--android:id="@+id/progressBar"-->
                     <!--android:layout_width="match_parent"-->
                     <!--android:layout_height="2dp"-->
@@ -224,14 +256,14 @@
                     <!--android:visibility="gone"-->
                     <!--android:elevation="10dp"/>-->
 
-            </androidx.cardview.widget.CardView>
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
+
+
+
 
         </LinearLayout>
-
-
-
-
-    </LinearLayout>
 
     </me.vipa.app.utils.thirdparty.RippleView>
 
