--- a/app/src/main/res/layout/poster_potrait_item_small.xml
+++ b/app/src/main/res/layout/poster_potrait_item_small.xml
@@ -31,16 +31,16 @@
                 card_view:cardPreventCornerOverlap="false">
 
                 <RelativeLayout
-                    android:layout_width="@dimen/NontonSize120"
-                    android:layout_height="@dimen/NontonSize180">
+                    android:layout_width="@dimen/NontonSize80"
+                    android:layout_height="@dimen/NontonSize120">
 
                     <ImageView
                         android:id="@+id/itemImage"
                         errorImage="@{@drawable/placeholder_potrait}"
                         imageUrl="@{playlistItem.posterURL}"
                         placeholder="@{@drawable/placeholder_potrait}"
-                        android:layout_width="@dimen/NontonSize120"
-                        android:layout_height="@dimen/NontonSize180"
+                        android:layout_width="@dimen/NontonSize80"
+                        android:layout_height="@dimen/NontonSize120"
                         android:contentDescription="TODO"
                         android:scaleType="fitXY" />
 
@@ -48,7 +48,6 @@
                         android:id="@+id/flNew"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="-2dp"
                         android:layout_marginBottom="-6dp"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentRight="true"
@@ -65,14 +64,13 @@
                         android:id="@+id/flNewMovie"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="-2dp"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentRight="true"
                         android:visibility="gone">
 
                         <ImageView
-                            android:layout_width="@dimen/vip_badge_width"
-                            android:layout_height="@dimen/vip_badge_height"
+                            android:layout_width="@dimen/vip_badge_width_small"
+                            android:layout_height="@dimen/vip_badge_height_small"
                             android:src="@{playlistItem.newMoviesDrawable, default=@drawable/new_movie_120}"
                             tools:ignore="ContentDescription"/>
                     </FrameLayout>
@@ -84,7 +82,7 @@
 
                 <RelativeLayout
                     android:id="@+id/titleLayout"
-                    android:layout_width="@dimen/NontonSize120"
+                    android:layout_width="@dimen/NontonSize80"
                     android:layout_height="wrap_content"
                     android:visibility="gone">
 
@@ -97,7 +95,7 @@
                             android:id="@+id/tvTitle"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/NontonSize180"
+                            android:layout_marginTop="@dimen/NontonSize120"
                             android:ellipsize="end"
                             android:gravity="left"
                             android:maxLines="1"
@@ -106,7 +104,7 @@
                             android:paddingLeft="@dimen/_3sdp"
                             android:visibility="gone"
                             android:textColor="?attr/watchlist_item_title_color"
-                            android:textSize="@dimen/_11sdp" />
+                            android:textSize="@dimen/_8sdp" />
 
                         <TextView
                             android:id="@+id/tvDescription"
@@ -120,7 +118,7 @@
                             android:paddingBottom="@dimen/_2sdp"
                             android:visibility="gone"
                             android:textColor="?attr/watchlist_item_title_color"
-                            android:textSize="@dimen/_9sdp" />
+                            android:textSize="@dimen/_7sdp" />
 
 
                     </LinearLayout>
@@ -132,13 +130,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
-                    android:layout_marginTop="-6dp"
                     android:layout_marginStart="-2dp"
                     android:visibility="gone">
 
                     <ImageView
-                        android:layout_width="@dimen/vip_badge_width"
-                        android:layout_height="@dimen/vip_badge_height"
+                        android:layout_width="@dimen/vip_badge_width_small"
+                        android:layout_height="@dimen/vip_badge_height_small"
                         android:layout_gravity="center"
                         android:src="@{playlistItem.vipImageDrawable, default=@drawable/vip_icon_120}"
                         tools:ignore="ContentDescription" />
