--- a/app/src/main/res/layout/potrait_item.xml
+++ b/app/src/main/res/layout/potrait_item.xml
@@ -25,39 +25,99 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
-
-                <ImageView
-                    android:id="@+id/itemImage"
-                    errorImage="@{@drawable/placeholder_potrait}"
-                    placeholder="@{@drawable/placeholder_potrait}"
+                <RelativeLayout
                     android:layout_width="@dimen/NontonSize100"
-                    android:layout_height="@dimen/NontonSize177"
-                    android:contentDescription="TODO"
-                    android:scaleType="fitXY"/>
+                    android:layout_height="@dimen/NontonSize177">
+
+                    <ImageView
+                        android:id="@+id/itemImage"
+                        errorImage="@{@drawable/placeholder_potrait}"
+                        placeholder="@{@drawable/placeholder_potrait}"
+                        android:layout_width="@dimen/NontonSize100"
+                        android:layout_height="@dimen/NontonSize177"
+                        android:contentDescription="TODO"
+                        android:scaleType="fitXY"/>
+
+                    <FrameLayout
+                        android:id="@+id/flNew"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="-2dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentRight="true"
+                        android:visibility="gone">
+
+                        <ImageView
+                            android:layout_width="@dimen/vip_badge_width"
+                            android:layout_height="@dimen/vip_badge_height"
+                            android:src="@{playlistItem.newSeriesImageDrawable, default=@drawable/series_icon_120}"
+                            tools:ignore="ContentDescription"/>
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:id="@+id/flNewMovie"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="-2dp"
+                        android:layout_marginTop="@dimen/NontonSize55"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentRight="true"
+                        android:visibility="gone">
+
+                        <ImageView
+                            android:layout_width="@dimen/vip_badge_width"
+                            android:layout_height="@dimen/vip_badge_height"
+                            android:src="@{playlistItem.newMoviesDrawable, default=@drawable/new_movie_120}"
+                            tools:ignore="ContentDescription"/>
+                    </FrameLayout>
+
+
+                </RelativeLayout>
+
 
 
                 <RelativeLayout
-                    android:layout_width="match_parent"
+                    android:id="@+id/titleLayout"
+                    android:layout_width="@dimen/NontonSize100"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
                     android:visibility="gone">
 
-                    <TextView
-                        android:id="@+id/tvTitle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginTop="@dimen/_30sdp"
-                        android:background="@drawable/above_shado"
-                        android:ellipsize="end"
-                        android:fontFamily="@font/sukhumvittadmai_normal"
-                        android:gravity="left"
-                        android:maxLines="1"
-                        android:paddingLeft="@dimen/_5sdp"
-                        android:paddingBottom="@dimen/_10sdp"
-                        android:text="Gadis"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_11sdp" />
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/tvTitle"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/NontonSize177"
+                            android:ellipsize="end"
+                            android:gravity="left"
+                            android:maxLines="1"
+                            android:visibility="gone"
+                            android:fontFamily="@font/sukhumvittadmai_normal"
+                            android:paddingTop="@dimen/NontonSize2"
+                            android:paddingLeft="@dimen/_3sdp"
+                            android:textColor="?attr/watchlist_item_title_color"
+                            android:textSize="@dimen/_11sdp" />
+
+                        <TextView
+                            android:id="@+id/tvDescription"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            android:gravity="left"
+                            android:maxLines="1"
+                            android:visibility="gone"
+                            android:fontFamily="@font/sukhumvittadmai_normal"
+                            android:paddingLeft="@dimen/_3sdp"
+                            android:paddingBottom="@dimen/_2sdp"
+                            android:textColor="?attr/watchlist_item_title_color"
+                            android:textSize="@dimen/_9sdp" />
+
+
+                    </LinearLayout>
 
                 </RelativeLayout>
 
@@ -97,34 +157,7 @@
                 </FrameLayout>
 
 
-                <FrameLayout
-                    android:id="@+id/flNew"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="-2dp"
-                    android:layout_gravity="end|bottom"
-                    android:visibility="gone">
 
-                    <ImageView
-                        android:layout_width="@dimen/vip_badge_width"
-                        android:layout_height="@dimen/vip_badge_height"
-                        android:src="@{playlistItem.newSeriesImageDrawable, default=@drawable/series_icon_120}"
-                        tools:ignore="ContentDescription"/>
-                </FrameLayout>
-                <FrameLayout
-                    android:id="@+id/flNewMovie"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="-2dp"
-                    android:layout_gravity="end|bottom"
-                    android:visibility="gone">
-
-                    <ImageView
-                        android:layout_width="@dimen/vip_badge_width"
-                        android:layout_height="@dimen/vip_badge_height"
-                        android:src="@{playlistItem.newMoviesDrawable, default=@drawable/new_movie_120}"
-                        tools:ignore="ContentDescription"/>
-                </FrameLayout>
 
                 <ImageView
                     android:id="@+id/ivContinuePlay"
