--- a/app/src/main/res/layout/landscape_item_large.xml
+++ b/app/src/main/res/layout/landscape_item_large.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -7,6 +8,9 @@
         <variable
             name="playlistItem"
             type="me.vipa.app.beanModelV3.uiConnectorModelV2.EnveuVideoItemBean" />
+        <variable
+            name="progress"
+            type="Integer" />
     </data>
 
     <me.vipa.app.utils.thirdparty.RippleView
@@ -20,30 +24,85 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/transparent">
 
                 <androidx.cardview.widget.CardView
                     style="@style/Custom.Widget.CardView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/NontonSize2">
+
+                    <me.vipa.app.utils.CustomProgressBar
+                        android:id="@+id/progress_bar"
+                        style="@style/Widget.AppCompat.ProgressBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:visibility="gone" />
 
                     <RelativeLayout
-                        android:layout_width="@dimen/_85sdp"
-                        android:layout_height="@dimen/_85sdp">
+                        android:layout_width="wrap_content"
+                        android:layout_height="@dimen/NontonSize126">
 
                         <ImageView
                             android:id="@+id/itemImage"
-                            errorImage="@{@drawable/placeholder_square}"
-                            placeholder="@{@drawable/placeholder_square}"
-                            android:layout_width="@dimen/_85sdp"
-                            android:layout_height="@dimen/_85sdp"
-                            android:background="@drawable/placeholder_square"
+                            errorImage="@{@drawable/placeholder_landscape}"
+                            placeholder="@{@drawable/placeholder_landscape}"
+                            android:layout_width="@dimen/NontonSize224"
+                            android:layout_height="@dimen/NontonSize126"
+                            android:background="@drawable/placeholder_landscape"
                             android:contentDescription="TODO"
                             android:scaleType="fitXY" />
 
 
+
+                        <LinearLayout
+                            android:id="@+id/llContinueProgress"
+                            android:layout_width="match_parent"
+                            android:orientation="vertical"
+                            android:layout_alignParentBottom="true"
+                            android:layout_height="match_parent"
+                            android:visibility="gone">
+
+
+                            <RelativeLayout
+                                android:layout_width="@dimen/NontonSize224"
+                                android:layout_height="@dimen/NontonSize123">
+
+                                <ImageView
+                                    android:layout_centerInParent="true"
+                                    android:layout_width="@dimen/NontonSize35"
+                                    android:layout_height="@dimen/NontonSize35"
+                                    android:background="@drawable/play_icon_ios"
+                                    android:contentDescription="TODO"
+                                    android:scaleType="fitXY" />
+
+
+                            </RelativeLayout>
+
+
+                            <SeekBar
+                                android:id="@+id/progressBar"
+                                android:layout_width="match_parent"
+                                android:layout_height="2dp"
+                                android:layout_alignParentBottom="true"
+                                android:layout_gravity="bottom"
+                                android:background="@color/bottom_navigation_bg_dark"
+                                android:minHeight="0dp"
+                                android:paddingStart="0dp"
+                                android:paddingEnd="0dp"
+                                android:paddingBottom="0dp"
+                                android:progressDrawable="@drawable/progress_background"
+                                android:thumb="@color/gray"
+                                android:thumbTint="@android:color/transparent"
+                                tools:targetApi="lollipop"
+                                android:progress="@{progress}"
+                                android:elevation="10dp"/>
+                        </LinearLayout>
 
                         <FrameLayout
                             android:id="@+id/flNew"
@@ -65,8 +124,6 @@
                             android:id="@+id/flNewMovie"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginEnd="-2dp"
-                            android:layout_marginTop="@dimen/NontonSize55"
                             android:layout_alignParentBottom="true"
                             android:layout_alignParentRight="true"
                             android:visibility="gone">
@@ -78,11 +135,15 @@
                                 tools:ignore="ContentDescription"/>
                         </FrameLayout>
 
+
                     </RelativeLayout>
+
+
+
 
                     <RelativeLayout
                         android:id="@+id/titleLayout"
-                        android:layout_width="@dimen/_85sdp"
+                        android:layout_width="@dimen/NontonSize224"
                         android:layout_height="wrap_content"
                         android:visibility="gone">
 
@@ -95,7 +156,7 @@
                                 android:id="@+id/tvTitle"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/_85sdp"
+                                android:layout_marginTop="@dimen/NontonSize126"
                                 android:ellipsize="end"
                                 android:gravity="left"
                                 android:maxLines="1"
@@ -104,7 +165,7 @@
                                 android:paddingTop="@dimen/NontonSize2"
                                 android:paddingLeft="@dimen/_3sdp"
                                 android:textColor="?attr/watchlist_item_title_color"
-                                android:textSize="@dimen/_11sdp" />
+                                android:textSize="@dimen/_12sdp" />
 
                             <TextView
                                 android:id="@+id/tvDescription"
@@ -118,7 +179,7 @@
                                 android:paddingLeft="@dimen/_3sdp"
                                 android:paddingBottom="@dimen/_2sdp"
                                 android:textColor="?attr/watchlist_item_title_color"
-                                android:textSize="@dimen/_9sdp" />
+                                android:textSize="@dimen/_10sdp" />
 
 
                         </LinearLayout>
@@ -163,45 +224,45 @@
 
 
 
+
                     <ImageView
                         android:id="@+id/ivContinuePlay"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:contentDescription="continue_watching_play_icon"
-                        android:src="@drawable/continue_watching_play_icon"
-                        android:visibility="gone" />
+                        android:visibility="gone"
+                        app:srcCompat="@drawable/play_icon_rounded_blue" />
+
+
+                    <!--<SeekBar-->
+                    <!--android:id="@+id/progressBar"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="2dp"-->
+                    <!--android:layout_alignParentBottom="true"-->
+                    <!--android:layout_gravity="bottom"-->
+                    <!--android:background="@color/white"-->
+                    <!--android:minHeight="0dp"-->
+                    <!--android:paddingStart="0dp"-->
+                    <!--android:paddingEnd="0dp"-->
+                    <!--android:paddingBottom="0dp"-->
+                    <!--android:progress="50"-->
+                    <!--android:progressDrawable="@drawable/progress_background"-->
+                    <!--android:thumb="@color/gray"-->
+                    <!--android:thumbTint="@android:color/transparent"-->
+                    <!--tools:targetApi="lollipop"-->
+                    <!--android:visibility="gone"-->
+                    <!--android:elevation="10dp"/>-->
 
                 </androidx.cardview.widget.CardView>
 
-            </RelativeLayout>
-
-            <LinearLayout
-                android:id="@+id/llContinueProgress"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/continue_watching_progress_height"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/NontonSize4"
-                android:layout_marginTop="@dimen/NontonSize6"
-                android:layout_marginRight="@dimen/NontonSize4"
-                android:layout_marginBottom="@dimen/NontonSize6"
-                android:background="@drawable/rounded_button2"
-                android:visibility="gone">
-
-                <ProgressBar
-                    android:id="@+id/pbProcessing"
-                    style="?android:attr/progressBarStyleHorizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:indeterminateOnly="false"
-                    android:progress="10"
-                    android:progressDrawable="@drawable/progress_continue_watching" />
-
-
             </LinearLayout>
+
+
 
 
         </LinearLayout>
 
     </me.vipa.app.utils.thirdparty.RippleView>
+
 </layout>
