--- a/app/src/main/res/layout/potrait_item_large.xml
+++ b/app/src/main/res/layout/potrait_item_large.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -11,45 +11,38 @@
 
     <me.vipa.app.utils.thirdparty.RippleView
         android:id="@+id/rippleView"
+        rv_centered="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        rv_centered="true">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_1sdp"
             android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            <androidx.cardview.widget.CardView
                 style="@style/Custom.Widget.CardView"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/railLeftMargin"
-                android:layout_marginBottom="@dimen/railBottomMargin"
-                card_view:cardCornerRadius="4dp"
-                card_view:cardPreventCornerOverlap="false">
+                android:layout_height="wrap_content">
 
                 <RelativeLayout
-                    android:layout_width="@dimen/NontonSize120"
-                    android:layout_height="@dimen/NontonSize180">
+                    android:layout_width="@dimen/NontonSize133"
+                    android:layout_height="@dimen/NontonSize236">
 
                     <ImageView
                         android:id="@+id/itemImage"
                         errorImage="@{@drawable/placeholder_potrait}"
-                        imageUrl="@{playlistItem.posterURL}"
                         placeholder="@{@drawable/placeholder_potrait}"
-                        android:layout_width="@dimen/NontonSize120"
-                        android:layout_height="@dimen/NontonSize180"
+                        android:layout_width="@dimen/NontonSize133"
+                        android:layout_height="@dimen/NontonSize236"
                         android:contentDescription="TODO"
-                        android:scaleType="fitXY" />
+                        android:scaleType="fitXY"/>
 
                     <FrameLayout
                         android:id="@+id/flNew"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="-2dp"
-                        android:layout_marginBottom="-6dp"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentRight="true"
                         android:visibility="gone">
@@ -66,6 +59,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="-2dp"
+                        android:layout_marginTop="@dimen/NontonSize55"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentRight="true"
                         android:visibility="gone">
@@ -77,14 +71,14 @@
                             tools:ignore="ContentDescription"/>
                     </FrameLayout>
 
-                </RelativeLayout>
 
+                </RelativeLayout>
 
 
 
                 <RelativeLayout
                     android:id="@+id/titleLayout"
-                    android:layout_width="@dimen/NontonSize120"
+                    android:layout_width="@dimen/NontonSize133"
                     android:layout_height="wrap_content"
                     android:visibility="gone">
 
@@ -97,16 +91,16 @@
                             android:id="@+id/tvTitle"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/NontonSize180"
+                            android:layout_marginTop="@dimen/NontonSize236"
                             android:ellipsize="end"
                             android:gravity="left"
                             android:maxLines="1"
+                            android:visibility="gone"
                             android:fontFamily="@font/sukhumvittadmai_normal"
                             android:paddingTop="@dimen/NontonSize2"
                             android:paddingLeft="@dimen/_3sdp"
-                            android:visibility="gone"
                             android:textColor="?attr/watchlist_item_title_color"
-                            android:textSize="@dimen/_11sdp" />
+                            android:textSize="@dimen/_12sdp" />
 
                         <TextView
                             android:id="@+id/tvDescription"
@@ -115,24 +109,25 @@
                             android:ellipsize="end"
                             android:gravity="left"
                             android:maxLines="1"
+                            android:visibility="gone"
                             android:fontFamily="@font/sukhumvittadmai_normal"
                             android:paddingLeft="@dimen/_3sdp"
                             android:paddingBottom="@dimen/_2sdp"
-                            android:visibility="gone"
                             android:textColor="?attr/watchlist_item_title_color"
-                            android:textSize="@dimen/_9sdp" />
+                            android:textSize="@dimen/_10sdp" />
 
 
                     </LinearLayout>
 
                 </RelativeLayout>
 
+
                 <FrameLayout
                     android:id="@+id/flExclusive"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
-                    android:layout_marginTop="-6dp"
+                    android:layout_marginTop="-2dp"
                     android:layout_marginStart="-2dp"
                     android:visibility="gone">
 
@@ -150,7 +145,6 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_gravity="end"
-                    android:layout_marginTop="-1dp"
                     android:layout_marginEnd="-2dp"
                     android:visibility="gone">
 
@@ -171,10 +165,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:contentDescription="continue_watching_play_icon"
-                    android:src="@drawable/continue_watching_play_icon"
                     android:visibility="gone" />
-
             </androidx.cardview.widget.CardView>
+
 
             <LinearLayout
                 android:id="@+id/llContinueProgress"
@@ -202,4 +195,5 @@
         </LinearLayout>
 
     </me.vipa.app.utils.thirdparty.RippleView>
+
 </layout>
